[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", optional = true }
fxhash = "0.2.1" 
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
rayon = "1.5.1"
memmap = "0.7.0"
criterion = { version = "0.5.0", features = ["html_reports"] }
memchr = "2.7.2"
num_cpus = "1.16.0"

[[bench]]
name = "integer_parser"
harness = false

[[bench]]
name = "bench_solution"
harness = false

[features]
generator = ["anyhow", "rand", "rand_distr"]

[[bin]]
name = "generate"
required-features = ["generator"]

[[bin]]
name = "1brc"
path = "src/main.rs"

[profile.release]
debug = true
